--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
+    "mysql2": "^3.14.2",
     "nodemon": "^3.1.9",
     "pg": "^8.13.3",
     "pg-hstore": "^2.3.4",
+    "punycode": "^2.3.1",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
     "sequelize": "^6.37.6",
